# nadiloka

./: CLAUDE.md  RELEASE.txt  pyproject.toml
.claude/skills/execute-issues/: SKILL.md
.claude/skills/release-version/: SKILL.md
.claude/skills/upload-issues/: SKILL.md
demos/: empty.py  light.py
nadiloka/: __init__.py  counters.py  grid.py  render.py  tejas.py  world.py
spec/: ARCHITECTURE.md  MISSION.md  ROADMAP.md  VISION.md
spec/nadiloka_ukr/: ARCHITECTURE.md  MISSION.md  ROADMAP.md  VISION.md
spec/roadmap/implementation/: v0.1-execution-report.md  v0.1-github-report.md  v0.1-issues.md  v0.2-execution-report.md  v0.2-github-report.md  v0.2-issues.md  v0.3-execution-report.md  v0.3-github-report.md  v0.3-issues.md  v0.4-issues.md  v1.1-issues.md  v1.2-issues.md  v1.3-issues.md  v2.1-issues.md  v2.2-issues.md  v3.1-issues.md  v3.2-issues.md  v4.1-issues.md  v4.2-issues.md  v4.3-issues.md  v5.1-issues.md  v5.2-issues.md  v5.3-issues.md
tests/: test_counters.py  test_determinism.py  test_energy_band.py  test_grid.py  test_light_demo.py  test_package.py  test_patch_lifecycle.py  test_render.py  test_smoke_light.py  test_step.py  test_tejas.py  test_world.py
